--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,7 @@
         <item name="colorSecondaryVariant">@color/gray</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">@color/darkBlue</item>
+        <item name="android:statusBarColor">@color/blue</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
